ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - host: ingcloud.cloud # 사용자님의 도메인
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tapp-service
            port:
              number: 80
